# InsuranceSystem

./: README.md  package-lock.json  pyproject.toml
InsuranceSystem/: manage.py  policyholders_fixture.json
InsuranceSystem/InsuranceSystem/: asgi.py  settings.py  urls.py  wsgi.py
InsuranceSystem/policyholders/: apps.py  functions.py  models.py  serializers.py  urls.py  views.py
InsuranceSystem/policyholders/migrations/: 0001_initial.py  0002_alter_policyholder_introducer.py
insurance_system_frontend/: README.md  package-lock.json  package.json
insurance_system_frontend/src/: App.vue
insurance_system_frontend/src/components/: PolicyPage.vue
insurance_system_frontend/src/routers/: index.js
